# opencode-platform

./: .env.example  .flake8  .gitignore  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.openclaw/: workspace-state.json
backend/: .editorconfig  .flake8  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 002_add_performance_indexes.py  002_skill_versions.py  003_gateway_tables.py  004_add_workflow_tables.py  005_add_workflow_execution_indexes.py  v1.0.0_skill_monitoring.py
backend/app/: config.py  database.py  main.py
backend/app/api/: __init__.py  billing.py  debug_websocket.py  files.py  gateway.py  monitoring.py  sessions.py  skill_executor.py  skills.py  skills_dev.py  skills_hub.py  skills_version.py  stats.py  tools.py  webhooks.py  websocket.py  workflow_executions.py  workflow_templates.py  workflows.py
backend/app/core/: cache.py  debug_executor.py  debug_manager.py  error_codes.py  exceptions.py  i18n.py  monitoring.py  rate_limit.py  security.py  skill_executor.py  skill_metrics.py
backend/app/data/: workflow_templates.json
backend/app/models/: __init__.py  billing.py  category.py  deployment.py  file.py  gateway.py  published_skill.py  skill.py  skill_invocation_log.py  skill_stats.py  skill_version.py  tool.py  user.py  workflow.py  workflow_execution.py
backend/app/schemas/: __init__.py  billing.py  category.py  deployment.py  examples.py  gateway.py  review.py  skill.py  skill_version.py  skills_hub.py  stats.py  tool.py  workflow.py
backend/app/services/: __init__.py  cache_service.py  deployment_service.py  docker_service.py  execution_context.py  gateway_service.py  git_service.py  index_sync_service.py  popularity_service.py  scheduler_service.py  search_service.py  skill_monitoring_service.py  stats_service.py  usage_service.py  workflow_cache.py  workflow_executor.py  workflow_optimizer.py  workflow_templates.py
backend/app/utils/: __init__.py  async_file_ops.py  minio_client.py
backend/tests/: test_async_file_ops.py  test_cache.py  test_config_security.py  test_debug_websocket.py  test_error_handling.py  test_git_service.py  test_skill_model_fields.py  test_skills_version.py  test_tools.py  test_websocket_security.py
docs/: BUG_FIX_WORKFLOW.md  DEBUG_CONSOLE_USAGE.md  PHASE1_COMPLETION_REPORT.md  PHASE2_COMPLETION_REPORT.md  PHASE2_PLAN.md  PHASE3_COMPLETION_REPORT.md  PHASE3_PLAN.md  PHASE4_COMPLETION_REPORT.md  PHASE4_PLAN.md  PHASE5_PLAN.md  PROJECT_COMPLETION_REPORT.md
frontend/: jest.config.cjs  package.json  (+1 more)
(+201 files in other folders)
