[tool.poetry]
name = "opencode-backend"
version = "0.1.0"
description = "OpenCode Web Platform Backend"
authors = ["OpenCode Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.109.0"
uvicorn = {extras = ["standard"], version = "0.27.0"}
sqlalchemy = "2.0.25"
asyncpg = "0.29.0"
redis = "5.0.1"
celery = "5.3.6"
pydantic = "2.5.3"
pydantic-settings = "2.1.0"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
python-multipart = "0.0.6"
httpx = "0.26.0"
slowapi = "0.1.9"
docker = "^6.1.0"
psutil = "^5.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.4"
pytest-asyncio = "0.23.3"
pytest-cov = "4.1.0"
black = "24.1.1"
flake8 = "7.0.0"
mypy = "1.8.0"
alembic = "1.13.1"
isort = "5.13.2"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ============= 代码格式化配置 =============

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [".venv", "migrations"]

# ============= 类型检查配置 =============

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ["migrations", "tests"]

# ============= 测试配置 =============

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ============= 覆盖率配置 =============

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/migrations/*"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true

# ============= Flake8 配置说明 =============
# 在 .flake8 文件中配置:
# [flake8]
# max-line-length = 100
# extend-ignore = E203, E501, W503
# exclude = .git,__pycache__,migrations,.venv
